[package]
name = "tools"
version = "0.1.0"
authors = ["Christopher Prohm"]
edition = "2018"

# make this the default command
default-run = "tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tools-utils = { path = "../tools-utils" }
